# OpenMusicSheet

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  midi_bridge.rs
src/core/: document-model.ts  index.ts  midi-converter.ts  musicxml-io.ts  pdf-exporter.ts  playback-engine.ts  project-file.ts  score-mutations.ts  undo-manager.ts  wav-exporter.ts
src/ui/: App.tsx  ScoreRenderer.tsx  StaffPanel.tsx  StatusBar.tsx  Toolbar.tsx
tests/: document-model.test.ts  midi-converter.test.ts  musicxml-io.test.ts  project-file.test.ts  sample-musicxml.test.ts  score-mutations.test.ts  undo-manager.test.ts
tests/assets/: sample-score.musicxml
tools/: check-no-comments.mjs  pre-commit
