[package]
name = "opensheetmusic"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["dialog-all", "fs-all", "path-all", "shell-open", "window-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
midly = "0.5"

[features]
custom-protocol = ["tauri/custom-protocol"]
